--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
 
 @custom-variant dark (&:is(.dark *));
 
+@utility text-1.5 {
+    font-size : 20px;
+    line-height: 27px;
+    text-shadow: 0.5px 0.8px 2px rgba(0, 0, 0, 0.5);
+}
+
   @utility ptp-0.5 {
   padding-left: 7px;
   padding-bottom: 5px;
